# rust_d3_delaunay

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/cross_pattern/: Cargo.toml  README.md
examples/cross_pattern/src/: main.rs
examples/n_points/: .gitignore  Cargo.toml
examples/n_points/src/: main.rs
examples/stippling/: Cargo.toml  Embedded+TDD+Kata.ics  README.md  Rust+Meetup+Reboot+3.ics  index.html  package.json  webpack.config.js  webpack.production.config.js
examples/stippling/js/: index.ts
examples/stippling/original/: data.js  index.html  package.json  test.js  webpack.config.js  webpack.production.config.js
examples/stippling/original/js/: image.ts  index.ts  script.ts
examples/stippling/src/: lib.rs  stippler.rs
examples/triangulation/: Cargo.toml
examples/triangulation/src/: main.rs
lib/: Cargo.toml
lib/benches/: n_points.rs  static_points.rs  update.rs
lib/src/: convex_polygon.rs  lib.rs  path.rs  polygon.rs  voronoi.rs
lib/src/delaunay/: jitter.rs  mod.rs
lib/tests/: delaunay.rs  delaunay_test.rs  voronoi.rs  voronoi_test.rs
src/: lib.rs  path.rs  polygon.rs  voronoi.rs
src/delaunay/: colinear.rs  flat_array.rs  jitter.rs  mod.rs
src/voronoi/: mod.rs
tests/: delaunay_test.rs  voronoi_test.rs
