[package]
authors = { workspace = true }
categories = ["graphics", "mathematics"]
description = "A port of D3/d3-delauany"
edition = { workspace = true }
license = { workspace = true }
keywords = ["delauany", "diagram", "graphics", "voronoi"]
name = "d3_delaunay_rs"
readme = "../README.md"
repository = "https://github.com/martinfrances107/rust_d3_delaunay"
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
generator = ["dep:generator"]

[dependencies]
d3_geo_rs = "~2"
delaunator = "~1"
generator = { version = "~0.8", optional = true }
geo = { workspace = true }
geo-types = { workspace = true }
num-traits = "~0.2"
[dev-dependencies]
pretty_assertions = "~1"
