[package]
authors = { workspace = true }
categories = ["graphics", "mathematics"]
description = "A port of D3/d3-delauany"
edition = { workspace = true }
license = { workspace = true }
keywords = ["delauany", "diagram", "graphics", "voronoi"]
name = "d3_delaunay_rs"
readme = "../README.md"
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
generator = ["dep:generator"]

[[bench]]
name = "n_points"
harness = false

[[bench]]
name = "update"
harness = false

[dependencies]
d3_geo_rs = "3.1.2"
delaunator = "1.0.2"
generator = { version = "0.8.7", optional = true }
geo = { workspace = true }
geo-types = { workspace = true }
num-traits = "0.2.19"

[dev-dependencies]
rand = "0.9.2"
criterion = "0.7.0"
pretty_assertions = "1.4.1"
