[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = { workspace = true }
keywords = ["demo", "graphics"]
license = "MIT"
categories = ["graphics"]
description = "A example app demonstrating a simple pattern derived from 5 points."
name = "cross_pattern"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo"
version = "0.1.0"
# Version 1.65 is required as this package makes use of "Generic Associated Types".
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d3_delaunay_rs = { path = "../../lib" }
geo = {workspace=true}
geo-types = {workspace=true}
rand = "~0.8"
