[package]
authors =  { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
keywords = ["demo", "delauany", "diagram", "graphics", "voronoi"]
license = { workspace = true }

description = "A example app demonstrating a simple pattern derived from 5 points."
name = "cross_pattern"
readme = "README.md"
repository = { workspace = true }
version = { workspace = true }
# Version 1.65 is required as this package makes use of "Generic Associated Types".
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d3_delaunay_rs = { path = "../../lib" }
geo = {workspace=true}
geo-types = {workspace=true}
rand = "~0.8"
