[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = { workspace = true }
keywords = ["demo", "graphics"]
license = "MIT"
categories = ["graphics"]
description = "A example app show to delaunay and voronoi meshes generated form n points a random"
name = "n_points"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo"
version = "0.1.0"
# Version 1.65 is required as this package makes use of "Generic Associated Types".
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d3_delaunay_rs = { path = "../../lib" }
geo = { workspace = true }
geo-types = { workspace = true }
rand = "~0.8"
clap = { version = "4.3.22", features = ["derive"] }
