[package]
authors = { workspace = true }
edition = { workspace = true }
keywords = ["demo", "graphics"]
license = { workspace = true }
categories = ["graphics"]
description = "A example app show to delaunay and voronoi meshes generated form n points a random"
name = "n_points"
readme = "README.md"
repository = { workspace = true }
version = { workspace = true }

# Needed by this clap class definition.
# [arg(short, long, default_value_t = 500)]
rust-version = "1.70"

[[bin]]
name = "n_points"
test = false
bench = false

[dependencies]
d3_delaunay_rs = { path = "../../lib" }
geo = { workspace = true }
geo-types = { workspace = true }
rand = "0.9.2"
clap = { version = "4.5.11", features = ["derive"] }
