[package]
name = "stippling"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

d3_delaunay_rs = { path = "../../lib" }
getrandom = { version = "~0.2", features = ["js"] }
geo = { workspace=true }
geo-types = { workspace=true }
rand = { version = "~0.8" }
wasm-bindgen = "~0.2"
wasm-bindgen-test = "~0.3"


[dependencies.web-sys]
version = "~0.3"
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlParagraphElement",
  "ImageData",
  "Node",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
  "Performance",
  "PerformanceTiming",
  "PerformanceMeasure",
  "Text",
  "Window",
]
