[package]
name = "stippling"
authors = { workspace = true }
categories = { workspace = true }
description = "A example app demonstrating a black and white images converted to a seried of dots."
keywords = ["demo", "delauany", "diagram", "graphics", "voronoi"]
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

d3_delaunay_rs = { path = "../../lib" }
geo-types = { workspace=true }
wasm-bindgen = "~0.2"
wasm-bindgen-test = "~0.3"


[dependencies.web-sys]
version = "~0.3"
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlParagraphElement",
  "ImageData",
  "Node",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
  "Performance",
  "PerformanceTiming",
  "PerformanceMeasure",
  "Text",
  "Window",
]
